# denser-retriever

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENCE  LICENSE  Makefile  README.md  SECURITY.md  bun.lockb  cookiecutter-config-file.yml  docker-compose.dev.yml  docker-compose.yml  package.json  passages.jsonl  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  docs.yml
denser/: Reranker.py  Retriever.py  RetrieverElasticSearch.py  RetrieverGeneral.py  RetrieverMilvus.py  config.py  config.yaml  utils.py  utils_data.py
denser_retriever/: __init__.py  __main__.py  embeddings.py  embedings.py  filter.py  gradient_boost.py  keyword.py  reranker.py  retriever.py  retriever_elastic_search.py  retriever_elasticsearch.py  retriever_general.py  retriever_milvus.py  settings.py  utils.py  utils_data.py
denser_retriever/vectordb/: __init__.py  base.py  milvus.py  qdrant.py
docker/: Dockerfile  README.md
docker/milvus/: README.md
docker/milvus/standalone/: docker-compose.yml  hello_milvus.py  list_connections.py  reset_password.py
examples/: config.yaml  denser_chat.py  denser_search.py  denser_search_cpws.py  run_benchmark.py
experiments/: config.yaml  config_local.yaml  config_server.yaml  denser_data.py  generate_retriever_data.py  hf_data_loader.py  index_and_query_from_docs.py  index_and_query_from_webpage.py  index_and_query_local_file.py  index_and_query_website.py  run_benchmark.py  run_experiment.py  test.py  train_and_test.py  utils.py  utils_data.py
experiments/data/contextual-embeddings/: README.md  create_data.py
experiments/data/contextual-embeddings/data_base/: passages.jsonl  qrels.jsonl
experiments/data/contextual-embeddings/data_context/: passages.jsonl  queries.jsonl
experiments/models/: msmarco_xgb_es+vs+rr_n.json
milvus/: README.md
milvus/standalone/: docker-compose.yml  hello_milvus.py  milvus.yaml  requirements.txt
scripts/: denser_chat.py  run_benchmark.py
tests/: config-cpws.yaml  config-denser.yaml  config-test-cn.yaml  config-test.yaml  config-titanic.yaml  test_cpws.py  test_data_loader.py  test_denser.py  test_filter.py  test_keyword.py  test_reranker.py  test_retriever.py  test_retriever_elasticsearch.py  test_retriever_general.py  test_retriever_milvus.py  test_titanic.py  test_utils.py  utils.py
tests/test_data/: cpws_2021_10_top10.csv  cpws_2021_10_top10_en.csv  cpws_passages_top10.jsonl  denser_website_passages_top10.jsonl  passages_000000.jsonl  scifact_xgb_es+vs+rr_n.json  titanic_top10.csv  titanic_top10.jsonl
tutorials/question_answering/: config.yaml  question_answering.ipynb
utils/: preprocess_data.py  preprocess_data_titanic.py
www/: .gitignore  README.md  api.json  biome.json  bun.lockb  components.json  generate-openapi.mjs  mdx-components.tsx  next.config.mjs  package.json  pnpm-lock.yaml  postcss.config.js  railway.toml  sst.config.ts  tailwind.config.js  theme.config.tsx  tsconfig.json  vercel.json
www/app/: global.css  layout.tsx  layoutOptions.tsx  manifest.ts  page.tsx  sitemap.ts  source.ts  twitter-image.alt.txt
www/app/[[...slug]]/: page.tsx
www/app/docs/: layout.tsx  layoutOptions.tsx
www/app/docs/[[...slug]]/: page.tsx
www/components/: background.tsx  footer.tsx  frame.tsx  home.tsx  icons.tsx  main-container.tsx  mteb-chart.tsx  screenshot.tsx
www/components/home/: bento.tsx  faq.tsx  hero-image.tsx  hero-text.tsx  hero.tsx  join-cta.tsx  pricing.tsx
www/components/ui/: icons.tsx  linear-gradient.tsx  ripple.tsx
www/content/docs/: index.mdx  meta.json  quick-start.mdx
www/content/docs/api/: index.mdx  meta.json
www/content/docs/api/reference-api/: reference-crawl.mdx  reference-retriever.mdx
www/content/docs/core/: development.mdx  index.mdx  quick-start.mdx
www/content/docs/core/examples/: e2e-chat.mdx  e2e-search.mdx
www/content/docs/core/experiments/: index_and_query.mdx  mted_result.json  training.mdx
www/content/docs/core/install/: install-server.mdx  installation.mdx
www/content/docs/core/misc/: unit-tests.mdx
www/content/docs/examples/: e2e-chat.mdx  e2e-search.mdx
www/content/docs/experiments/: index_and_query.mdx  mteb_retrieval.mdx  mted_result.json  training.mdx
www/content/docs/install/: install-local.mdx  installation.mdx
www/content/docs/misc/: filters.mdx
www/pages/: _app.mdx  _meta.json  index.mdx
www/pages/docs/: _meta.json  index.mdx
www/pages/docs/advanced/: _meta.json  filters.mdx  retriever-experiments.mdx  scale-up.mdx
www/pages/docs/get-started/: _meta.json  install-keyword-search.mdx  install-vector-db.mdx  installation.mdx  quick_start.mdx  run-tests.mdx  unit-tests.mdx
www/pages/examples/: _meta.json  e2e-chat.mdx  e2e-search.mdx  index.mdx
www/public/: p.js  robots.txt
www/utils/: metadata.ts  source.ts
